--- a/logowanie2/style.css
+++ b/logowanie2/style.css
@@ -7,16 +7,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-img {
-    display: block;
+img.pies {
     width: 200px;
-    margin: auto;
 }
 
-i {
-    width: 100%;
-    text-align: center;
-    color: rgb(249, 166, 2);
+.center {
+    display: block;
+    margin: auto;
 }
 
 h1,
