--- a/logowanie/style.css
+++ b/logowanie/style.css
@@ -21,6 +21,31 @@ img {
     margin: auto;
 }
 
+#iks {
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+}
+
+#iks div {
+    position: relative;
+    width: 100%;
+    height: 1px;
+    background: #f4f4f4;
+    transform: rotate(45deg);
+}
+
+#iks div::before {
+    content: '';
+    position: absolute;
+    background: inherit;
+    width: 100%;
+    height: 1px;
+    transform: rotate(90deg);
+}
+
 #container {
     display: flex;
     flex-direction: column;
