--- a/logowanie2/style.css
+++ b/logowanie2/style.css
@@ -16,6 +16,31 @@ img.pies {
     margin: auto;
 }
 
+#iks {
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+}
+
+#iks div {
+    position: relative;
+    width: 100%;
+    height: 1px;
+    background: #f4f4f4;
+    transform: rotate(45deg);
+}
+
+#iks div::before {
+    content: '';
+    position: absolute;
+    background: inherit;
+    width: 100%;
+    height: 1px;
+    transform: rotate(90deg);
+}
+
 h1,
 h2,
 p {
@@ -24,9 +49,10 @@ p {
 }
 
 #container {
+    position: relative;
     width: 400px;
     background: #333;
-    overflow: auto;
+    overflow: hidden;
 }
 
 #container h1 {
