--- a/logowanie/style.css
+++ b/logowanie/style.css
@@ -22,8 +22,9 @@ img {
 }
 
 #iks {
+    flex: none;
     position: absolute;
-    top: 20px;
+    top: 10px;
     right: 10px;
     width: 20px;
     height: 20px;
@@ -31,6 +32,7 @@ img {
 
 #iks div {
     position: relative;
+    top: 8.5px;
     width: 100%;
     height: 1px;
     background: #f4f4f4;
@@ -47,9 +49,11 @@ img {
 }
 
 #container {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 400px;
+    min-height: 520px;
     background: #333;
 }
 
