--- a/logowanie2/style.css
+++ b/logowanie2/style.css
@@ -17,8 +17,9 @@ img.pies {
 }
 
 #iks {
+    flex: none;
     position: absolute;
-    top: 20px;
+    top: 10px;
     right: 10px;
     width: 20px;
     height: 20px;
@@ -26,6 +27,7 @@ img.pies {
 
 #iks div {
     position: relative;
+    top: 8.5px;
     width: 100%;
     height: 1px;
     background: #f4f4f4;
@@ -41,6 +43,7 @@ img.pies {
     transform: rotate(90deg);
 }
 
+
 h1,
 h2,
 p {
@@ -51,6 +54,7 @@ p {
 #container {
     position: relative;
     width: 400px;
+    min-height: 520px;
     background: #333;
     overflow: hidden;
 }
