--- a/logowanie/style.css
+++ b/logowanie/style.css
@@ -28,6 +28,12 @@ img {
     right: 10px;
     width: 20px;
     height: 20px;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+}
+
+#iks:hover {
+    transform: rotate(180deg);
 }
 
 #iks div {
